Fix add carrousel coverflow

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@
   border-radius: 1rem;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
